Tue December 14, 2021

1. Updated Stan to C++ compiler v2.28.2 (development).

Mon October 18, 2021

1. Updated Stan to C++ compiler v2.28.0 (development).
2. Supported complex numbers.
3. Building `libsundials_kinsol` on Windows.
4. Allowed static build of TBB objects.

Tue August 3, 2021

1. Updated package dependencies.
2. Updated Stan to C++ compiler v2.26.1.
3. Built libsundials_kinsol into `libStanHeaders`.
4. Fixed variational method checks.
5. Fixed elt_divide() ambiguity with the old version of Stan to C++ compiler.
6. Converted unit testing to use `testthat`.
7. Cleaned up and update startup messages.

Thu February 18, 2021

1. Updated to Stan v2.26.1

Fri February 5, 2021

1. Using Stan transpiler ([`stanc3`](https://github.com/stan-dev/stanc3)) to generate C++ code from Stan code.
2. Reorganized directory structure and removed redundant [`math`](https://github.com/stan-dev/math) submodule.
3. Updated the symlinks in `StanHeaders/inst/include` for the reorganized directory structure.
4. Updated the [`stan`](https://github.com/stan-dev/stan) and [`math`](https://github.com/stan-dev/math) submodules, recursively, and fixed related issues.
5. Updated the [`stan`](https://github.com/stan-dev/stan) and [`math`](https://github.com/stan-dev/math) headers.
6. Updated package dependencies.
7. Updated `StanHeaders` build script.
8. Fixed `rstan` compilation errors on Windows:
     - Addressed symlinks-related issues.
     - Defined STRICT_R_HEADERS.
11. Supported the new TBB interface.
12. Respecting `RcppParallel` flags for `rstan` plugin.
     - `RcppParallel` now supports the new interface of Intel TBB and allows using external library, including oneTBB which uses a new interface. This requires specific compiler flags to link to the correct version of TBB library.
14. Added support for `stan::io::validate_dims`.
15. Introducing a new `stanc_process()` helper function to process Stan code.
16. Updated `stanc` to print errors and return code for debugging.