@@ -25,12 +25,6 @@ SUNDIALS_KINSOL := $(patsubst %.c,%.o, \
 
 SUNDIALS_NVECSERIAL := nvector/serial/nvector_serial.c
 
-ifndef TBB_LIB
-TBB = tbb/concurrent_hash_map.cpp tbb/concurrent_queue.cpp tbb/concurrent_vector.cpp tbb/dynamic_link.cpp tbb/itt_notify.cpp tbb/cache_aligned_allocator.cpp tbb/pipeline.cpp tbb/queuing_mutex.cpp tbb/queuing_rw_mutex.cpp tbb/reader_writer_lock.cpp tbb/spin_rw_mutex.cpp tbb/spin_mutex.cpp tbb/critical_section.cpp tbb/task.cpp tbb/tbb_misc.cpp tbb/tbb_misc_ex.cpp tbb/mutex.cpp tbb/recursive_mutex.cpp tbb/condition_variable.cpp tbb/tbb_thread.cpp tbb/concurrent_monitor.cpp tbb/semaphore.cpp tbb/private_server.cpp rml/client/rml_tbb.cpp tbb/task_group_context.cpp tbb/governor.cpp tbb/market.cpp tbb/arena.cpp tbb/scheduler.cpp tbb/observer_proxy.cpp tbb/tbb_statistics.cpp tbb/tbb_main.cpp
-else
-TBB =
-endif
-
-SOURCES = $(SUNDIALS_CVODES) $(SUNDIALS_IDAS) $(SUNDIALS_KINSOL) $(SUNDIALS_NVECSERIAL) $(TBB) init.c
+SOURCES = $(SUNDIALS_CVODES) $(SUNDIALS_IDAS) $(SUNDIALS_KINSOL) $(SUNDIALS_NVECSERIAL) init.c
 OBJECTS_C = $(SOURCES:.c=.o)
 OBJECTS = $(OBJECTS_C:.cpp=.o)
